- Fix: chargement d'un contexte créé par import d'un csv
- Fix: contrôle l'existence de la destination avant export et demande confirmation s'il y a lieu
- Evolution: ajout dans PrefsDialog d'une limite d'aggrégation des doublons prise en compte dans le traitement
- Evolution: changement des tailles d'icones utilisée dans PrefsDialog

============================================================================
Evolutions/Corrections en 1.2.0

 - Evolution: ajout de la fonction Rechercher dans les titres et métadonnées
 - Bug (corrigé): fermeture des fichiers après identification du format par Droid
 - Evolution: détection, alerte et proposition de changement ou de nettoyage quand un répertoire temporaire a déjà été utilisé
 - Evolution: les logs de MailExtract sont visibles dans la fenêtre d'import
 - Bug (corrigé): ajout par drag-and-drop dans un document vide
 - Evolution: suppression de la prise en compte du contexte d'exportation défini en ligne de commande
 - Evolution: ajout de la fonction Nettoyage de l'espace de travail

 [Evolutions de mailextract en 1.2.0-SNAPSHOT ayant un impact sur ReSIP]
 - Refacto: synchronisation de la version sedatools/mailextract
 - Evolution: prise en compte de l'évolution de la bibliothèque MailExtract (Changement de l'appel StoreExtractor)

============================================================================
Evolutions/Corrections en 1.1.0

- Evolution: mise à jour des bibliothèques java utilisées
- Evolution: ajout d'un jeu de caractéres d'encodage par défaut pour l'import de courriels (utilisé pour le décodage des pst)
[Evolution de mailextract correspondante en 0.9.2-SNAPSHOT]
- Evolution: les logs de MailExtract sont visibles dans la fenêtre d'import

============================================================================
Evolutions/Corrections -> 1.0

- Bug (corrigé): si l'extraction de métadonnées textuelles des courriels contient des caractères non standards dans le XML la constitution des paquets échoue...