@@ -29,6 +29,9 @@ Evolutions/Corrections en 1.3.0
 - Fix: contrôle l'existence de la destination avant export et demande confirmation s'il y a lieu
 - Evolution: ajout dans PrefsDialog d'une limite d'aggrégation des doublons prise en compte dans le traitement
 - Evolution: changement des tailles d'icones utilisée dans PrefsDialog
+- Evolution: ajout de la vérification de la conformité au SEDA 2.1
+- Evolution: ajout de la vérification de la conformité à un profil spécifique SEDA 2.1
+- Evolution: ajout de la sauvegarde et import des préférences dans le dialogue "A Propos"
 
 ============================================================================
 Evolutions/Corrections en 1.2.0
